--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "jwt-decode": "^4.0.0",
     "next": "15.3.4",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-modal": "^3.16.3",
+    "react-toastify": "^11.0.5"
+  },
+  "devDependencies": {
+    "@types/node": "24.0.10",
+    "@types/react": "19.1.8",
+    "typescript": "5.8.3"
   }
 }
